tests/ui/no_struct_name_multi.stderr
error: expected identifier
 --> tests/ui/no_struct_name_multi.rs:5:27
  |
5 |     query_args!("$a, $b", { test, test });
  |                           ^
